--- a/api-reference/matchers-and-actions/mock-actions.mdx
+++ b/api-reference/matchers-and-actions/mock-actions.mdx
@@ -1,321 +1,243 @@
 ---
-title: "Actions: Controlling Mock Behavior"
-description: "Guide to predefined and user-defined actions in GoogleMock. Learn to set method return values, invoke custom code, throw exceptions, and leverage advanced behaviors like invoking parameters as callbacks."
+title: "Mock Actions"
+description: "Describes built-in and user-defined action templates to specify custom mock behaviors. Includes Invoke, Return, Throw, and advanced variadic actions for complex scenarios."
 ---
 
-# Actions: Controlling Mock Behavior
+# Mock Actions
 
-This guide explains how to use **actions** in GoogleMock (gMock) to control the behavior of mock methods. Actions specify what should happen when a mock method is invoked: whether it returns a value, mutates arguments, throws an exception, or invokes callbacks. You'll learn both predefined actions and how to create your own, enabling precise simulation of complex behaviors in tests.
+This page explains the built-in and user-defined action templates in GoogleMock, which allow you to specify custom mock behaviors. Actions determine what happens when a mock method is invoked during testing, such as returning values, throwing exceptions, or invoking custom logic.
 
----
-
-## Understanding Actions in GoogleMock
-
-When writing tests with mocks, it's not enough to state that a method will be called—you need to specify *what it does when called*. This is where actions come in.
-
-- Actions define *behavior* for a mock method.
-- They are used in `EXPECT_CALL(...).WillOnce()` or `WillRepeatedly()`, or in `ON_CALL(...).WillByDefault()`.
-- Actions can return values, mutate arguments, invoke functions (including callbacks), throw exceptions, and combine multiple behaviors.
-
-By controlling behavior through actions, you enable tests that emulate various real-world scenarios—successful operations, failures, asynchronous callbacks, and side effects.
+GoogleMock provides several core built-in actions such as `Invoke`, `Return`, and `Throw`. Additionally, it supports advanced variadic actions that let you compose complex behaviors for mock methods.
 
 ---
 
-## Basic Action Usage
+## Action Templates Overview
 
-### Returning Values
+GoogleMock offers a rich set of action templates for controlling mock method behaviors in tests. These include:
 
-The simplest action is returning a value when a mock method is called.
+- **Invoke**: Calls a function, method, functor, or lambda when the mock is invoked.
+- **Return**: Specifies a fixed value or varying responses to return from the mock call.
+- **Throw**: Throws an exception from the mock method.
+- **Variadic Actions**: Advanced templates like `DoAll`, `WithArg`, and `InvokeArgument` to perform sequences of actions or manipulate arguments.
 
-```cpp
-using ::testing::Return;
-
-EXPECT_CALL(mock_obj, Method()).WillOnce(Return(42));
-```
-
-If the method returns a reference, use:
-
-```cpp
-using ::testing::ReturnRef;
-Bar bar_instance;
-EXPECT_CALL(mock_obj, GetBar()).WillOnce(ReturnRef(bar_instance));
-```
-
-To return the current value of an object pointed to by a pointer at the time of invocation, use:
-
-```cpp
-using ::testing::ReturnPointee;
-int x = 5;
-EXPECT_CALL(mock_obj, GetValue()).WillRepeatedly(ReturnPointee(&x));
-```
-
-This ensures the value at `x` is read when the mock is called, not when the expectation is set.
-
-### Default Return Values
-
-If no action is specified, gMock returns:
-
-- `void` function: just returns
-- `bool` function: returns `false`
-- Numeric/pointer type: `0` or equivalent
-- Default-constructible types: default-constructed value
-
-You can customize default return values globally using `DefaultValue<T>::Set()`, but it's better to specify explicit actions for clarity.
+Each action is defined in the `::testing` namespace and can be combined or customized to simulate complex interactions.
 
 ---
 
-## Controlling Side Effects
+## Core Action Types
 
-Mocks may also need to simulate side effects, like changing output parameters or modifying state.
+### Invoke: Calling Callables or Member Functions
 
-### Mutating Output Arguments
-
-Use `SetArgPointee<N>(value)` to assign `value` to the variable pointed to by the `N`-th argument (0-based).
+Allows the mock method to delegate execution to a callable object:
 
 ```cpp
-using ::testing::SetArgPointee;
-EXPECT_CALL(mock_obj, FillData(_, _))
-    .WillOnce(SetArgPointee<1>(42));
-```
+using ::testing::Invoke;
 
-If the method returns a value, combine with `Return()` via `DoAll()`:
-
-```cpp
-using ::testing::DoAll;
-using ::testing::Return;
-using ::testing::SetArgPointee;
-EXPECT_CALL(mock_obj, MutateInt(_))
-    .WillOnce(DoAll(SetArgPointee<0>(5), Return(true)));
-```
-
-### Setting Arrays
-
-For output arguments that are arrays or iterators, use `SetArrayArgument<N>(begin, end)`:
-
-```cpp
-using ::testing::SetArrayArgument;
-int vals[3] = {1, 2, 3};
-EXPECT_CALL(mock_obj, GetNumbers(_))
-    .WillOnce(SetArrayArgument<0>(vals, vals + 3));
-```
-
----
-
-## Invoking Callables Passed as Arguments
-
-Sometimes a mock method receives a function pointer, functor, or callback as an argument, which your test wants to invoke to simulate asynchronous behavior or response.
-
-Use `InvokeArgument<N>(args...)` to invoke the N-th argument (0-based) of the mock method, passing additional arguments.
-
-```cpp
-using ::testing::InvokeArgument;
-
-EXPECT_CALL(mock_obj, DoWork(_, _))
-    .WillOnce(InvokeArgument<1>(5));  // Will call callback with 5
-```
-
-If the callable expects reference parameters, wrap them using `std::ref()`:
-
-```cpp
-EXPECT_CALL(mock_obj, DoCallback(_))
-    .WillOnce(InvokeArgument<0>(std::ref(my_obj)));
-```
-
-`InvokeArgument` makes it straightforward to simulate callback invocations.
-
----
-
-## Using Callables as Actions
-
-You can use existing functions, methods, functors, or lambdas as actions directly:
-
-```cpp
-int sum(int x, int y) { return x + y; }
-EXPECT_CALL(mock_obj, Add(_, _)).WillOnce(Invoke(sum));
-```
-
-You can call member functions on objects:
-
-```cpp
-EXPECT_CALL(mock_obj, Process(_))
-    .WillOnce(Invoke(&helper_obj, &Helper::Process));
-```
-
-If the callable you want to call takes fewer arguments than the mock method, select arguments using `WithArgs` or `WithoutArgs`:
-
-```cpp
-EXPECT_CALL(mock_obj, Foo(_, _, _))
-    .WillOnce(WithArgs<0,2>(Invoke(MyFunction)));
-
-EXPECT_CALL(mock_obj, Bar())
-    .WillOnce(WithoutArgs(Invoke(MyNullaryFunction)));
-```
-
-Alternatively, use `InvokeWithoutArgs()` to call a callable that takes no arguments:
-
-```cpp
-EXPECT_CALL(mock_obj, DoSomething())
-    .WillOnce(InvokeWithoutArgs(MyNullaryFunction));
-```
-
----
-
-## Combining Multiple Actions
-
-`DoAll()` lets you combine multiple actions to be performed sequentially. The return value of the last action is used as the method return.
-
-```cpp
-EXPECT_CALL(mock_obj, Compute(_))
-    .WillOnce(DoAll(
-        SaveArg<0>(&saved_arg),
-        Invoke(&SomeFunction),
-        Return(42)));
-```
-
-Same restrictions apply: all actions except the last must return `void`.
-
----
-
-## Ignoring Action Results
-
-When an action returns a value but a void return is expected, use `IgnoreResult()` to drop the value:
-
-```cpp
-EXPECT_CALL(mock_obj, Foo())
-    .WillOnce(IgnoreResult(Invoke(FunctionReturningInt)));
-```
-
-Note: `IgnoreResult()` cannot be applied to actions that already return void.
-
----
-
-## Creating Custom Actions
-
-You can define a custom action simply by implementing a callable object (functor, lambda, or struct with `operator()` matching the mock method signature):
-
-```cpp
-struct MultiplyBy {
-  int multiplier;
-  template <typename T>
-  T operator()(T arg) { return arg * multiplier; }
-};
-
-EXPECT_CALL(mock_obj, GetValue(_))
-    .WillOnce(MultiplyBy{7});
-```
-
-For more flexibility, implement `ActionInterface` or use `MakePolymorphicAction` as shown in the official reference for advanced control and polymorphism.
-
----
-
-## Frequently Used Built-in Actions
-
-| Action                  | Description                                                                 |
-| ----------------------- | --------------------------------------------------------------------------- |
-| `Return(value)`          | Return a copy of `value`.                                                    |
-| `ReturnRef(variable)`    | Return a reference to `variable`.                                           |
-| `ReturnPointee(ptr)`     | Return the value pointed to by `ptr` (evaluated on each call).              |
-| `SetArgPointee<N>(val)` | Assign `val` to the dereferenced N-th argument.                            |
-| `SetArrayArgument<N>(b, e)` | Copy elements `[b,e)` into the N-th argument.                             |
-| `DeleteArg<N>()`         | Delete the pointer value of the N-th argument (useful for cleanup).         |
-| `Invoke(f)`              | Invoke a callable `f` with the mock method's arguments.                     |
-| `InvokeArgument<N>(...)` | Invoke the N-th argument (callable) with specified parameters.              |
-| `DoAll(a1, a2, ..., an)` | Perform all actions `a1` to `an` sequentially, returning result of last.     |
-| `IgnoreResult(a)`        | Perform `a` and ignore its result (when void expected).                     |
-| `Throw(exception)`       | Throw the specified exception.                                              |
-
----
-
-## Tips & Best Practices
-
-- Use `ON_CALL()` for setting default behavior without enforcing calls; use `EXPECT_CALL()` when the calls *must* occur.
-- Combine multiple side effects in one action using `DoAll()`.
-- Use `InvokeArgument` to simulate asynchronous callbacks cleanly.
-- Avoid over-specifying actions; keep tests focused on contract rather than implementation details.
-
----
-
-## Troubleshooting
-
-- If your mock method is called unexpectedly (no matching `EXPECT_CALL`), gMock warns or fails depending on mock strictness.
-- Remember that `.WillOnce(Return(std::move(...)))` can only be called once, as the moved object is consumed.
-- For methods returning references or pointers, take care to use `ReturnRef()` or `ReturnPointee()` to return live values.
-- Avoid returning local variables by reference.
-
----
-
-## Example Usage
-
-```cpp
-#include <gmock/gmock.h>
-using ::testing::Return;
-using ::testing::SetArgPointee;
-using ::testing::DoAll;
-using ::testing::InvokeArgument;
-
-class MockProcessor {
+class MockFoo {
  public:
-  MOCK_METHOD(bool, ProcessData, (int input, int* output), ());
-  MOCK_METHOD(void, RegisterCallback, (std::function<void(int)> callback), ());
+  MOCK_METHOD(int, Compute, (int x), (override));
 };
 
-TEST(ProcessorTest, UsesMockWithActions) {
-  MockProcessor mock;
+int RealCompute(int x) { return x * 2; }
 
-  // When ProcessData is called, set *output to 42 and return true.
-  EXPECT_CALL(mock, ProcessData(_, _))
-      .WillOnce(DoAll(SetArgPointee<1>(42), Return(true)));
+MockFoo mock;
+EXPECT_CALL(mock, Compute(5))
+    .WillOnce(Invoke(RealCompute));
 
-  int result = 0;
-  EXPECT_TRUE(mock.ProcessData(10, &result));
-  EXPECT_EQ(result, 42);
+// On call, RealCompute(5) is invoked, returning 10
+int result = mock.Compute(5);
+```
 
-  // When RegisterCallback is called, immediately invoke the callback with 5.
-  EXPECT_CALL(mock, RegisterCallback(_))
-      .WillOnce(InvokeArgument<0>(5));
+`Invoke` also supports invoking member functions on objects:
 
-  bool callback_invoked = false;
-  mock.RegisterCallback([&](int value) {
-    callback_invoked = (value == 5);
-  });
-  EXPECT_TRUE(callback_invoked);
-}
+```cpp
+class Helper {
+ public:
+  int AddOne(int x) { return x + 1; }
+};
+
+Helper helper;
+EXPECT_CALL(mock, Compute(3))
+    .WillOnce(Invoke(&helper, &Helper::AddOne));
+```
+
+`Invoke` can accept lambdas or functors, letting you embed custom logic inline.
+
+### Return: Specifying Return Values
+
+The `Return()` action immediately returns a specified value when the mock method is called.
+
+```cpp
+using ::testing::Return;
+
+EXPECT_CALL(mock, Compute(10))
+    .WillOnce(Return(42));
+
+int result = mock.Compute(10); // returns 42
+```
+
+Variations include `ReturnRef()` for returning references and `ReturnPointee()` for returning the pointed-to value. You can also specify sequences:
+
+```cpp
+EXPECT_CALL(mock, Compute(_))
+    .WillOnce(Return(1))
+    .WillOnce(Return(2))
+    .WillRepeatedly(Return(3));
+``` 
+
+### Throw: Simulating Exceptions
+
+Using `Throw()` lets a mock method throw an exception when called, useful for testing error paths.
+
+```cpp
+using ::testing::Throw;
+
+EXPECT_CALL(mock, Compute(0))
+    .WillOnce(Throw(std::runtime_error("invalid input")));
+
+// mock.Compute(0) will throw.
 ```
 
 ---
 
-## Further Learning
+## Advanced Variadic Actions
 
-This guide builds on the concepts in [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) and the [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html). Detailed reference on all actions and their advanced usage is available in the [Actions Reference](https://google.github.io/googletest/reference/actions.html) and comprehensive coverage in the [Mocking Reference](https://google.github.io/googletest/reference/mocking.html).
+GoogleMock supports several composable actions allowing you to implement complex behaviors.
+
+### DoAll
+
+Executes multiple actions in sequence for the same mock call. The result of the last action is returned.
+
+```cpp
+using ::testing::DoAll;
+using ::testing::SetArgPointee;
+using ::testing::Return;
+
+EXPECT_CALL(mock, MutateValue(_))
+    .WillOnce(DoAll(
+        SetArgPointee<0>(10),  // set *arg0 = 10
+        Return(true)          // then return true
+    ));
+```
+
+### WithArg and WithArgs
+
+Pass selected arguments of the mock method to another action.
+
+```cpp
+using ::testing::WithArg;
+
+// Calls the inner action with the 1st argument.
+EXPECT_CALL(mock, SomeFunc(_, _))
+    .WillOnce(WithArg<1>(Invoke(SomeOtherFunc)));
+
+// Calls the inner action with the 0th and 2nd argument.
+EXPECT_CALL(mock, SomeFunc(_, _, _))
+    .WillOnce(WithArgs<0, 2>(Invoke(AnotherFunc)));
+```
+
+### WithoutArgs
+
+Invokes an action without passing any arguments.
+
+```cpp
+using ::testing::WithoutArgs;
+
+EXPECT_CALL(mock, Process(_))
+    .WillOnce(WithoutArgs(Invoke([] { DoSomething(); })));
+```
+
+### InvokeArgument
+
+Invokes a callable argument passed into the mock method.
+
+```cpp
+using ::testing::InvokeArgument;
+
+EXPECT_CALL(mock, Process(_, _))
+    .WillOnce(InvokeArgument<1>(42));  // calls second argument as a callable with 42
+```
+
+If the callable takes reference parameters, you can wrap arguments with `std::ref()`.
 
 ---
 
-<AccordionGroup title="Key Actions Explained">
-<Accordion title="Return and ReturnRef">
-Use `Return(value)` to return a copy of a value and `ReturnRef(variable)` to return a reference. Ideal for controlling return values in mocked methods.
+## Defining Custom Actions
+
+You can create your own actions using the `ACTION`, `ACTION_P`, and `ACTION_TEMPLATE` macros. They provide a succinct way to define complex behaviors.
+
+Example of a simple action that returns the sum of two arguments:
 
 ```cpp
-EXPECT_CALL(mock_obj, GetCount()).WillOnce(Return(5));
-EXPECT_CALL(mock_obj, GetConfig()).WillOnce(ReturnRef(config_instance));
+ACTION(Sum) { return arg0 + arg1; }
+
+EXPECT_CALL(mock, Add(_, _))
+    .WillOnce(Sum());
 ```
-</Accordion>
-<Accordion title="SetArgPointee and SetArrayArgument">
-These allow your mock to modify the value pointed to by an argument or copy arrays into output buffers.
+
+Parameterized actions allow passing custom parameters:
 
 ```cpp
-EXPECT_CALL(mock_obj, FillData(_, _)).WillOnce(SetArgPointee<1>(100));
-EXPECT_CALL(mock_obj, GetArray(_)).WillOnce(SetArrayArgument<0>(data, data + size));
-```
-</Accordion>
-<Accordion title="Invoke and InvokeArgument">
-Use `Invoke` to call a callable or member function on your mock’s behalf. `InvokeArgument` calls a callable passed as a mock method argument.
+ACTION_P(AddN, n) { return arg0 + n; }
 
-```cpp
-EXPECT_CALL(mock_obj, Compute(_, _)).WillOnce(Invoke(&Helper::Compute));
-EXPECT_CALL(mock_obj, AsyncOp(_)).WillOnce(InvokeArgument<0>(response));
+EXPECT_CALL(mock, Add(_, _))
+    .WillOnce(AddN(5));
 ```
-</Accordion>
-<Accordion title="DoAll and IgnoreResult">
-Combine multiple actions in order with `DoAll`, and use `IgnoreResult` to discard return values if your mock method returns void.
-</Accordion>
-</AccordionGroup>
+
+More details and examples are available in the [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html#new-actions).
+
+---
+
+## Tips and Best Practices
+
+- Prefer using `ON_CALL` to specify default behaviors without imposing expectations; reserve `EXPECT_CALL` for calls you want to verify.
+- When specifying multiple actions with `WillOnce` and `WillRepeatedly`, remember gMock infers how many times the mock method is expected to be called.
+- Use `RetiresOnSaturation()` to deactivate an expectation once its call count is reached.
+- Use `DoAll` to combine multiple side effects in a single mock method call.
+- Use `InvokeArgument` to call callbacks passed as arguments without handcrafting mock behavior.
+- When returning move-only types, use lambdas or `Return(ByMove(...))` with care.
+
+---
+
+## Common Pitfalls
+
+- Forgetting to specify actions for methods that do not have built-in default returns can cause runtime errors.
+- Actions like `DoDefault()` cannot be used inside composite actions like `DoAll()`.
+- Be cautious with sticky expectations in sequences; use `RetiresOnSaturation()` as needed.
+- Calling uninteresting methods without expectations leads to warnings unless you use `NiceMock`.
+
+---
+
+## References
+
+For further detailed recipes and API details, see:
+
+- [Actions Reference](../reference/actions.md)
+- [gMock Cookbook - Using Actions](https://google.github.io/googletest/gmock_cook_book.html#using-actions)
+- [gMock Cheat Sheet](../docs/gmock_cheat_sheet.md#actionlist)
+
+---
+
+## Diagram: Action Flow in Mock Invocation
+
+```mermaid
+sequenceDiagram
+  participant Test as Test Code
+  participant Mock as Mock Object
+  participant Action as Action Template
+  participant Callable as User Callable
+
+  Test->>Mock: Call Mock Method
+  Mock->>Action: Execute Action
+  alt Invoke Function
+    Action->>Callable: Call user function
+    Callable-->>Action: Return result
+  else Return Value
+    Action-->>Mock: Return constant or computed value
+  else Throw Exception
+    Action-->>Mock: Throw exception
+  else DoAll
+    Action->>Action: Execute multiple actions sequentially
+  end
+  Mock-->>Test: Return or throw
+```
