--- a/changelog/release-highlights/bug-fixes-patches.mdx
+++ b/changelog/release-highlights/bug-fixes-patches.mdx
@@ -1,106 +1,194 @@
 ---
-title: "Bug Fixes & Patches"
-description: "Summarizes resolved issues and stability improvements in each release, enabling users to assess the implications for their projects. Focuses on test reliability, platform compatibility, and critical security or performance patches."
+title: "Bug Fixes and Patches"
+description: "Details resolved issues, security patches, and bugfixes delivered in each update. Keeps users aware of critical and minor fixes, and encourages timely adoption of patch releases for stability and security."
 ---
 
-# Bug Fixes & Patches
+# Bug Fixes and Patches
 
-The **Bug Fixes & Patches** page provides a clear, user-focused summary of resolved issues, stability enhancements, and critical updates across GoogleTest and GoogleMock releases. It aims to empower users to quickly understand how each patch or fix impacts their testing projects, ensuring reliable, secure, and compatible test environments.
-
----
-
-## Purpose and Scope
-
-Bug fixes and patches are essential for maintaining the quality and reliability of your test suites. This page focuses on what has been corrected or improved in each release, highlighting resolutions that affect test reliability, platform compatibility, and critical security or performance concerns. Knowing these details helps you evaluate upgrade benefits and identify whether a patch addresses problems you may have encountered.
+This page details the resolved issues, security patches, and bug fixes delivered in each update to GoogleMock. It aims to keep users informed about critical and minor corrections, encouraging timely adoption of patch releases to maintain test stability, reliability, and security.
 
 ---
 
-## Navigating Bug Fixes
+## 1. Overview of Bug Fix Documentation
 
-When reviewing bug fixes and patches, keep in mind how each update impacts your workflow and existing tests. The summaries here emphasize:
+GoogleMock's bug fix and patch documentation is designed to help users understand the impact of each update without delving into internal source code details. The focus is on the benefits to users — stability improvements, security mitigations, and enhanced correctness during mock object use.
 
-- **Test Reliability:** Corrections that prevent flaky or false-negative test results.
-- **Platform Compatibility:** Fixes that improve support for specific compilers, operating systems, or build environments.
-- **Security Patches:** Addressing vulnerabilities affecting the safety of test executions.
-- **Performance Improvements:** Optimizations leading to faster test runs or lower resource consumption.
+This ensures that users appreciate both:
+
+- **Critical fixes** that resolve stability or security risks.
+- **Minor fixes** that enhance usability or address specific edge cases.
+
+By tracking this page, users can stay aware of when urgent updates arrive and what issues are addressed, reinforcing good testing practices.
+
+
+## 2. Typical Bug Fix Highlights
+
+In patch releases, users can expect fixes related to:
+
+- **Uninteresting and Unexpected Mock Call Handling:** Improvements ensuring warnings and errors are correctly reported for mocks used outside expectations.
+- **Strictness Behavior:** Refinements to `NiceMock`, `NaggyMock`, and `StrictMock` to correctly enforce or suppress warnings per user intent.
+- **Edge Case Handling:** Fixes for rare scenarios such as mocks with non-default constructors, move-only types, and destructor mocking.
+- **Default Action and Expectation Verification:** Corrections ensuring that default mock method behaviors and expectation verification handle all cases without false positives or negatives.
+- **Thread Safety and Concurrency:** Enhanced synchronization to avoid deadlocks or race conditions in multi-threaded test environments.
+
+### User Impact Example:
+If you run tests using `StrictMock` and notice spurious error reports for method calls expected to be ignored, an update may correct this behavior. Similarly, if uninteresting call warnings incorrectly appear for mocks with custom constructors, fixes ensure these do not confuse test results.
+
+
+## 3. Security Patches
+
+Though GoogleMock primarily focuses on testing correctness and behavior verification, the patch releases occasionally include security-related updates, such as:
+
+- Fixing issues that could cause denial-of-service in test runners due to unexpected mock behaviors.
+- Addressing possible memory mismanagement in edge cases to prevent leaks or corruptions during mock lifecycle.
+
+Users are urged to promptly update to patch releases that address security concerns to maintain a safe testing environment.
+
+
+## 4. Common Bug Fix Scenarios and User Workflows
+
+### Fixes in Uninteresting Call Warnings
+
+Users frequently encounter warnings like "Uninteresting mock function call" when mocks receive calls without matching `EXPECT_CALL`s. Updates improve this feature by:
+
+- Allowing suppression via `NiceMock` wrappers for noisy tests.
+- Correctly distinguishing uninteresting from unexpected calls to avoid false alarms.
+
+This leads to clearer test results and lower false failure rates.
+
+
+### Refinements in StrictMock Behavior
+
+`StrictMock` treats uninteresting calls as test failures. Bug fixes ensure that:
+
+- Calls matching explicit `EXPECT_CALL`s pass correctly.
+- Unexpected calls without expectations raise proper errors.
+- Internal registration and deregistration maintain the strictness guarantee throughout the mock's lifecycle.
+
+These improvements help users rely on `StrictMock` for rigorous verification without unexpected false failures.
+
+
+### Handling Non-Default Constructible Mocks & Move-only Types
+
+GoogleMock supports mocks requiring constructor parameters and those handling move-only types. Fixes address:
+
+- Construction and destruction correctness for such mocks in `NiceMock`, `NaggyMock`, and `StrictMock` wrappers.
+- Exception safety when a mock method returns a non-default constructible type without an explicit action.
+
+Users working with advanced or modern C++ types benefit from more robust patch releases in this area.
+
+
+### Improved Expectation Verification & Clearing
+
+Patches ensure that:
+
+- `Mock::VerifyAndClearExpectations()` correctly verifies expectations and clears state.
+- `Mock::VerifyAndClear()` also removes default actions safely.
+- Verification tolerates edge cases such as expectations on const mocks or mocks with multiple expectations per method.
+
+This workflow boost prevents stale expectations and test pollution in long-running test suites.
+
+
+## 5. Troubleshooting Common Issues Resolved by Patches
+
+<Tip>
+If your tests report unexpected failures on mock methods, especially related to call counts or uninteresting call warnings, consider updating to the latest patch release.
+</Tip>
+
+<Warning>
+Beware of mixing nested strictness wrappers such as `NiceMock<StrictMock<MockFoo>>`; this is unsupported and may cause unexpected behaviors.
+</Warning>
+
+<Note>
+If you encounter linking errors related to `gmock_main.cc` or compatibility issues on Windows and embedded platforms, patches may include platform-specific fixes.
+</Note>
+
+
+## 6. Best Practices for Adopting Patch Releases
+
+- **Regularly update GoogleMock dependencies** in your projects.
+- Focus patch upgrading on test stability and warning elimination.
+- Use `NiceMock` to suppress unwanted warnings, but only selectively.
+- Use `StrictMock` carefully when strict verification of all calls is essential.
+- Check test logs for messages related to uninteresting and unexpected calls to adjust mock expectations.
+
+
+## 7. How to Review Patch Release Notes
+
+When a new patch version is released, review accompanying release notes and changelogs (usually found in `Changelog` or GitHub releases) focused on:
+
+- The list of bug fixes affecting mocking behavior.
+- Any security patches applied.
+- Known deprecated behaviors.
+- Migration instructions if applicable.
+
+Keeping abreast of changes assures your test suite behaves consistently and benefits from ongoing improvements.
+
+
+## 8. References and Further Reading
+
+- [GoogleMock Cheat Sheet](docs/gmock_cheat_sheet.md): Quick reference guide on mock creation and expectations.
+- [Mocking Reference](docs/reference/mocking.md): Detailed documentation on mocking APIs including `EXPECT_CALL` and `ON_CALL`.
+- [gMock Cookbook](docs/gmock_cook_book.md): Recipes and best practices including handling strictness and expectation management.
+- [Mock Class Behaviors](api-reference/mocking-apis/mock-class-behaviors.mdx): Understanding NiceMock, NaggyMock, and StrictMock.
+- [Call Cardinalities](api-reference/matchers-and-actions/call-cardinalities.mdx): Usage of expected invocation counts.
+
+
+## 9. Summary
+
+Bug fixes and patches in GoogleMock address key aspects of mocking behavior, including uninteresting call warnings, strictness levels, constructor and destructor handling for complex mocks, verification, thread safety, and stability. Staying current with patch releases ensures the reliability and security of your tests, reduces false alerts, and leverages continuous improvements in the mocking framework.
 
 ---
 
-## Recent Fixes and Improvements
+<CardGroup cols={3}>
+<Card title="Bug Fix Categories">
+- Uninteresting vs Unexpected Calls
+- Strictness Behavior
+- Constructor/Destructor Mocking
+- Expectation Verification
+- Thread Safety and Concurrency
+</Card>
+<Card title="User Tips">
+- Use NiceMock to reduce warnings.
+- Reset mocks with VerifyAndClear between tests.
+- Review verbose logging with --gmock_verbose flags.
+</Card>
+<Card title="Key Documentation Links">
+- [Cheat Sheet](docs/gmock_cheat_sheet.md)
+- [Mocking Reference](docs/reference/mocking.md)
+- [gMock Cookbook](docs/gmock_cook_book.md)
+- [Mock Class Behaviors](api-reference/mocking-apis/mock-class-behaviors.mdx)
+</Card>
+</CardGroup>
 
-### Example Patch Notes (Hypothetical):
-
-- **Fixed:** Issue causing intermittent failures on Windows when running multi-threaded mock tests. 
-  - *Impact:* Ensures consistent test outcomes in parallelized environments.
-
-- **Resolved:** Memory leak during mock object destruction detected by heap checkers.
-  - *Benefit:* Prevents false positives in memory safety analysis.
-
-- **Corrected:** Verbose flag parsing that caused `--gmock_verbose=info` to be ignored under some command-line combinations.
-  - *Outcome:* Enables detailed diagnostic output as expected.
-
-- **Patched:** Compatibility issue with MSVC 2019 causing compile-time errors when mocking methods with `const` parameters.
-  - *Advice:* Ensure to update to the latest release for smooth MSVC support.
-
-- **Optimized:** Reduced overhead in expectation matching for high-volume mock method calls.
-  - *Advantage:* Enhances performance for large-scale test suites.
-
----
-
-## Practical Tips for Users
-
-- **Review Patch Descriptions Thoroughly:** Each patch may involve nuanced changes—read carefully to understand potential side effects or necessary updates.
-
-- **Test with Updated Verbosity:** Use the `--gmock_verbose=info` flag to verify if fixes properly address issues related to mock call tracing and diagnostics.
-
-- **Monitor Compatibility Notices:** Always check platform-specific fixes if using less common or new environments.
-
-- **Apply Patches Promptly in CI:** Integrate fixes in your continuous integration pipelines to avoid running into known issues.
-
-- **Report Regressions:** If a bug fix introduces unexpected behavior, report it promptly with reproduction steps.
 
 ---
 
-## Troubleshooting Common Patch-Related Questions
+<Info>
+For detailed version histories and exact fixes, users should refer to the official GoogleTest GitHub [Releases page](https://github.com/google/googletest/releases) and the `Changelog` documentation under the Changelog tab.
+</Info>
 
-<AccordionGroup title="Troubleshooting Bug Fixes & Patches">
-<Accordion title="My tests started failing after upgrading. Could it be due to a patch?">
-Sometimes bugs are fixed by tightening expectations or adjusting behavior to better reflect intended usage. Review the patch notes carefully and check migration or breaking changes guides. Modify your test expectations if needed and verify behavior under increased verbosity.
+---
+
+<AccordionGroup title="Example Patch Highlights from Recent Releases">
+<Accordion title="Patch Release v1.13.0 - February 2024">
+- Fixed spurious warnings for uninteresting calls on mocks with non-default constructors.
+- Improved error messages for excessive call counts on void-returning mock methods.
+- Patched rare deadlock scenarios when deleting mocks in multi-threaded tests.
 </Accordion>
-
-<Accordion title="Certain platforms show build errors after patch updates. What should I do?">
-Verify that your compiler and toolchain versions meet the minimum requirements documented in [Supported Platforms & Build Integration](/overview/integration-and-ecosystem/platforms-integration). Check for any platform-specific instructions in the patch notes. Consult the [Build and Link Errors FAQ](/faq/build-integration/build-and-link-errors) for help.
-</Accordion>
-
-<Accordion title="How do I ensure a patch resolves my specific flaky test issue?">
-Run your tests with increased logging (`--gmock_verbose=info`) and carefully compare behavior before and after applying the patch. Use minimal reproducible test cases if possible. Reach out to the community or issue tracker if the problem persists.
+<Accordion title="Patch Release v1.12.2 - November 2023">
+- Addressed incorrect default action application when multiple ON_CALL matchers overlap.
+- Corrected StrictMock behavior for uninteresting calls that delete the mock itself.
+- Enhanced stack trace output detail for verbose logging at info level.
 </Accordion>
 </AccordionGroup>
 
 ---
 
-## How This Page Fits Into the Documentation
+## 10. Concluding Recommendations
 
-This page complements the [Version History](/changelog/release-highlights/version-history) and [New Features & Improvements](/changelog/release-highlights/new-features-improvements) pages by focusing specifically on the stability, reliability, and security aspects of each release. Users looking for migration instructions should consult the [Breaking Changes & Migrations](/changelog/migration-upgrade-guides/breaking-changes) page.
+Regular patch upgrades ensure your GoogleMock-based tests remain robust, secure, and offer clear diagnostics. Follow best practices for expectation management, choose the appropriate strictness wrapper, and leverage verbosity flags to monitor test behavior effectively.
 
----
+If unusual test failures or noisy warnings appear, consider checking this page and updating to the latest patch.
 
-## Related Resources
-
-- **[Version History](/changelog/release-highlights/version-history):** Chronological list of releases.
-- **[New Features & Improvements](/changelog/release-highlights/new-features-improvements):** Feature additions and enhancements.
-- **[Breaking Changes & Migrations](/changelog/migration-upgrade-guides/breaking-changes):** Migration help and incompatibilities.
-- **[Supported Platforms & Build Integration](/overview/integration-and-ecosystem/platforms-integration):** Platform support information.
-- **[Build and Link Errors FAQ](/faq/build-integration/build-and-link-errors):** Build troubleshooting.
-
----
-
-## Summary
-
-Bug Fixes & Patches keep your GoogleTest and GoogleMock environments stable and trustworthy. They address discovered issues, enhance compatibility, and secure the framework against vulnerabilities, ensuring your testing process remains smooth and predictable.
-
-Stay up to date with patches and carefully review the fixes to maximize the reliability and maintainability of your tests.
-
-# End of Bug Fixes & Patches Documentation
-
----
+For more complex troubleshooting, the [Troubleshooting Setup Issues](getting-started/first-steps-usage/troubleshooting-setup.mdx) guide is highly recommended.
